--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,3 +3,7 @@
 <p>You found me!</p>
 
 <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRu07tfTe7oPSrLFfIhHOO42w4Zm1m4Oz7QlBrCZJ-lanZegrXd5Q">
+
+<li><a href="/register">Sign Up!</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
